homer/homer-03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-app
  namespace: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer-app
  template:
    metadata:
      labels:
        app: homer-app
    spec:
      containers:
      - name: homer-app
        image: sipcapture/homer-app:master
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: homer-app
  namespace: homer
spec:
  type: NodePort
  selector:
    app: homer-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30090
