homer/homer-06-heplify-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: heplify-server-nodeport
  namespace: homer
spec:
  type: NodePort
  selector:
    app: heplify-server
  ports:
  - name: hep-udp
    port: 9060
    targetPort: 9060
    protocol: UDP
    nodePort: 30060
